  was shown only for a few options anyway. The proper way to see the
  current settings is with the `--dump-config` option. The bug that
  was fixed that the generated manual page no longer contains values
  that are specific to the machine doing the generation, such as the
  hostname as the default value for `--client-name`. Reported by
  SanskritFritz.

Version 1.7.4, released 2014-03-31
--------------------------------

* The manual is now dual-licensed under GNU GPL v3 or later, and
  Creative Commons CC-BY-SA 4.0.

* The 1.7.3 release never went out. Let's pretend it wasn't even
  tagged in git, and everyone will be happy.

Bug fixes:

* Obnam FUSE got another bug fix from Valery Yundin, to fix a bug I
  introduced in 1.7. Reading big files via `obnam mount` should now
  work better.

* Fix count of backed up files. It used to always count directories.
  Reported by Alberto Fuentes as Debian bug
  [742384](https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=742384).

* `obnam diff latest` would fail due to a programming error. Reported
  by Junyx.

Version 1.7.2, released 2014-03-22
--------------------------------

Bug fixes:

* Fix another bug in the FUSE plugin's file reading code, found during
  the release process of 1.7.2.

Version 1.7.1, released 2014-03-22
--------------------------------

* The `dump-repo` command now outputs JSON instead of YAML. The
  dependency on PyYAML is no longer.

Bug fixes:

* Nemo Inis found a bug in the FUSE plugin (`obnam mount`), where
  Obnam would return the wrong data when the program reading the file
  didn't read the whole file from the beginning in one read(2) system
  call.

* The test suite now skips tests that require use of extended
  attributes in the `user` namespace. This should allow the test suite
  to be run on more build servers run by various distributions.

Version 1.7, released 2014-03-15
--------------------------------

WARNING: This release has had fairly large parts of the internals